@@ -1,9 +1,10 @@
 ﻿[B]Changelog[/B]
+* Fixed: issue with AWS timestamp not being in English (Fixes #1094)
+
+[I]Previous Changes[/I]
 * Fixed: VTM Nieuws did not play (Fixes #1092)
 * Changed: Hide VTM Nieuws from the VTM.be channel (See #1092)
 * Removed: De Redactie (See #1092)
-
-[I]Previous Changes[/I]
 * Fixed: VRT.nu categories (Fixes #1091)
 * Fixed: sorting order of listings (Fixes #1081)
 * Fixed: some clips would not play (Fixes #1060)
